tests/ui/parser/misspelled-keywords/struct.stderr
error: keyword `struct` is written in the wrong case
  --> $DIR/struct.rs:1:1
   |
LL | Struct Foor {
   | ^^^^^^
   |
help: write it in lowercase (notice the capitalization)
   |
LL - Struct Foor {
LL + struct Foor {
   |

error: aborting due to 1 previous error

