tests/ui/parser/misspelled-keywords/struct.rs
Struct Foor {
    //~^ ERROR keyword `struct` is written in the wrong case
    hello: String,
}

fn main() {}
